# simple_websocket_chat_app

./: .gitignore  README.md
client/: Cargo.toml  Dioxus.toml  input.css  tailwind.config.js
client/assets/: tailwind.css
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
