[package]
name = "client"
version = "0.1.0"
authors = ["M-Maciej <130112810+M-Maciej@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.2", features = [] }
gloo-net = {version = "0.6.0" , features = ["websocket"]}
gloo-timers = { version = "0.2", features = ["futures"] }
futures = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
